// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors/venues should get a list a of categories 1`] = `Object {}`;

exports[`selectors/venues should get a list a of categories 2`] = `Object {}`;

exports[`selectors/venues should get a list of next venues 1`] = `Object {}`;

exports[`selectors/venues should get a list of next venues 2`] = `
Object {
  "4b410414f964a5206dbf25e3": Object {
    "categories": Array [
      Object {
        "icon": Object {
          "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/apparel_",
          "suffix": ".png",
        },
        "id": "4bf58dd8d48988d103951735",
        "name": "Clothing Store",
        "pluralName": "Clothing Stores",
        "primary": true,
        "shortName": "Apparel",
      },
    ],
    "id": "4b410414f964a5206dbf25e3",
    "location": Object {
      "address": "184 Broadway (at Driggs)",
      "cc": "US",
      "city": "Brooklyn",
      "country": "United States",
      "crossStreet": "btwn Driggs Ave & Roebling St",
      "formattedAddress": Array [
        "184 Broadway (at Driggs) (btwn Driggs Ave & Roebling St)",
        "Brooklyn, NY 11211",
        "United States",
      ],
      "labeledLatLngs": Array [
        Object {
          "label": "display",
          "lat": 40.709751,
          "lng": -73.962264,
        },
      ],
      "lat": 40.709751,
      "lng": -73.962264,
      "postalCode": "11211",
      "state": "NY",
    },
    "name": "Brooklyn Industries",
  },
}
`;

exports[`selectors/venues should get a list of recommended places 1`] = `Array []`;

exports[`selectors/venues should get a list of recommended places 2`] = `
Array [
  Object {
    "reasons": Object {
      "count": 0,
      "items": Array [
        Object {
          "reasonName": "globalInteractionReason",
          "summary": "This spot is popular",
          "type": "general",
        },
      ],
    },
    "venue": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "id": "49b6e8d2f964a52016531fe3",
      "location": Object {
        "address": "179 E Houston St",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "btwn Allen & Orchard St",
        "distance": 130,
        "formattedAddress": Array [
          "179 E Houston St (btwn Allen & Orchard St)",
          "New York, NY 10002",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
          },
        ],
        "lat": 40.72286707707289,
        "lng": -73.98829148466851,
        "postalCode": "10002",
        "state": "NY",
      },
      "name": "Russ & Daughters",
      "venuePage": Object {
        "id": "77298563",
      },
    },
  },
]
`;

exports[`selectors/venues should get a list of similar venues 1`] = `Object {}`;

exports[`selectors/venues should get a list of similar venues 2`] = `
Object {
  "4c5ef77bfff99c74eda954d3": Object {
    "categories": Array [
      Object {
        "icon": Object {
          "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
          "suffix": ".png",
        },
        "id": "4bf58dd8d48988d1f5941735",
        "name": "Gourmet Shop",
        "pluralName": "Gourmet Shops",
        "primary": true,
        "shortName": "Gourmet",
      },
    ],
    "id": "4c5ef77bfff99c74eda954d3",
    "location": Object {
      "address": "200 5th Ave",
      "cc": "US",
      "city": "New York",
      "country": "United States",
      "crossStreet": "at W 23rd St",
      "formattedAddress": Array [
        "200 5th Ave (at W 23rd St)",
        "New York, NY 10010",
        "United States",
      ],
      "labeledLatLngs": Array [
        Object {
          "label": "display",
          "lat": 40.74198696405861,
          "lng": -73.98991319280194,
        },
      ],
      "lat": 40.74198696405861,
      "lng": -73.98991319280194,
      "postalCode": "10010",
      "state": "NY",
    },
    "name": "Eataly",
  },
}
`;

exports[`selectors/venues should get a specific venue 1`] = `undefined`;

exports[`selectors/venues should get a specific venue 2`] = `
Object {
  "categories": Array [
    Object {
      "icon": Object {
        "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
        "suffix": ".png",
      },
      "id": "4bf58dd8d48988d1cc941735",
      "name": "Steakhouse",
      "pluralName": "Steakhouses",
      "primary": true,
      "shortName": "Steakhouse",
    },
  ],
  "hasPerk": false,
  "id": "3fd66200f964a5209beb1ee3",
  "location": Object {
    "address": "178 Broadway",
    "cc": "US",
    "city": "Brooklyn",
    "country": "United States",
    "crossStreet": "at Driggs Ave",
    "distance": 10,
    "formattedAddress": Array [
      "178 Broadway (at Driggs Ave)",
      "Brooklyn, NY 11211",
      "United States",
    ],
    "labeledLatLngs": Array [
      Object {
        "label": "display",
        "lat": 40.70995790682886,
        "lng": -73.96229110893742,
      },
    ],
    "lat": 40.70995790682886,
    "lng": -73.96229110893742,
    "postalCode": "11211",
    "state": "NY",
  },
  "name": "Peter Luger Steak House",
  "referralId": "v-1565543515",
  "venuePage": Object {
    "id": "77462637",
  },
}
`;

exports[`selectors/venues should get categories of a venue 1`] = `Array []`;

exports[`selectors/venues should get categories of a venue 2`] = `
Array [
  Object {
    "icon": Object {
      "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
      "suffix": ".png",
    },
    "id": "4bf58dd8d48988d1cc941735",
    "name": "Steakhouse",
    "pluralName": "Steakhouses",
    "primary": true,
    "shortName": "Steakhouse",
  },
]
`;

exports[`selectors/venues should get location of a venue 1`] = `null`;

exports[`selectors/venues should get location of a venue 2`] = `
Object {
  "address": "178 Broadway",
  "cc": "US",
  "city": "Brooklyn",
  "country": "United States",
  "crossStreet": "at Driggs Ave",
  "distance": 10,
  "formattedAddress": Array [
    "178 Broadway (at Driggs Ave)",
    "Brooklyn, NY 11211",
    "United States",
  ],
  "labeledLatLngs": Array [
    Object {
      "label": "display",
      "lat": 40.70995790682886,
      "lng": -73.96229110893742,
    },
  ],
  "lat": 40.70995790682886,
  "lng": -73.96229110893742,
  "postalCode": "11211",
  "state": "NY",
}
`;

exports[`selectors/venues should get venues 1`] = `
Object {
  "categories": Object {},
  "entities": Object {},
  "miniVenues": Object {},
  "nextVenues": Object {},
  "recommendedPlaces": Array [],
  "similarVenues": Object {},
  "trendingEntities": Object {},
}
`;

exports[`selectors/venues should get venues 2`] = `
Object {
  "categories": Object {},
  "entities": Object {
    "3fd66200f964a5209beb1ee3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1cc941735",
          "name": "Steakhouse",
          "pluralName": "Steakhouses",
          "primary": true,
          "shortName": "Steakhouse",
        },
      ],
      "hasPerk": false,
      "id": "3fd66200f964a5209beb1ee3",
      "location": Object {
        "address": "178 Broadway",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "at Driggs Ave",
        "distance": 10,
        "formattedAddress": Array [
          "178 Broadway (at Driggs Ave)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.70995790682886,
            "lng": -73.96229110893742,
          },
        ],
        "lat": 40.70995790682886,
        "lng": -73.96229110893742,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Peter Luger Steak House",
      "referralId": "v-1565543515",
      "venuePage": Object {
        "id": "77462637",
      },
    },
  },
  "miniVenues": Object {},
  "nextVenues": Object {
    "4b410414f964a5206dbf25e3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/apparel_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d103951735",
          "name": "Clothing Store",
          "pluralName": "Clothing Stores",
          "primary": true,
          "shortName": "Apparel",
        },
      ],
      "id": "4b410414f964a5206dbf25e3",
      "location": Object {
        "address": "184 Broadway (at Driggs)",
        "cc": "US",
        "city": "Brooklyn",
        "country": "United States",
        "crossStreet": "btwn Driggs Ave & Roebling St",
        "formattedAddress": Array [
          "184 Broadway (at Driggs) (btwn Driggs Ave & Roebling St)",
          "Brooklyn, NY 11211",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.709751,
            "lng": -73.962264,
          },
        ],
        "lat": 40.709751,
        "lng": -73.962264,
        "postalCode": "11211",
        "state": "NY",
      },
      "name": "Brooklyn Industries",
    },
  },
  "recommendedPlaces": Array [
    Object {
      "reasons": Object {
        "count": 0,
        "items": Array [
          Object {
            "reasonName": "globalInteractionReason",
            "summary": "This spot is popular",
            "type": "general",
          },
        ],
      },
      "venue": Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1f5941735",
            "name": "Gourmet Shop",
            "pluralName": "Gourmet Shops",
            "primary": true,
            "shortName": "Gourmet",
          },
        ],
        "id": "49b6e8d2f964a52016531fe3",
        "location": Object {
          "address": "179 E Houston St",
          "cc": "US",
          "city": "New York",
          "country": "United States",
          "crossStreet": "btwn Allen & Orchard St",
          "distance": 130,
          "formattedAddress": Array [
            "179 E Houston St (btwn Allen & Orchard St)",
            "New York, NY 10002",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.72286707707289,
              "lng": -73.98829148466851,
            },
          ],
          "lat": 40.72286707707289,
          "lng": -73.98829148466851,
          "postalCode": "10002",
          "state": "NY",
        },
        "name": "Russ & Daughters",
        "venuePage": Object {
          "id": "77298563",
        },
      },
    },
  ],
  "similarVenues": Object {
    "4c5ef77bfff99c74eda954d3": Object {
      "categories": Array [
        Object {
          "icon": Object {
            "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
            "suffix": ".png",
          },
          "id": "4bf58dd8d48988d1f5941735",
          "name": "Gourmet Shop",
          "pluralName": "Gourmet Shops",
          "primary": true,
          "shortName": "Gourmet",
        },
      ],
      "id": "4c5ef77bfff99c74eda954d3",
      "location": Object {
        "address": "200 5th Ave",
        "cc": "US",
        "city": "New York",
        "country": "United States",
        "crossStreet": "at W 23rd St",
        "formattedAddress": Array [
          "200 5th Ave (at W 23rd St)",
          "New York, NY 10010",
          "United States",
        ],
        "labeledLatLngs": Array [
          Object {
            "label": "display",
            "lat": 40.74198696405861,
            "lng": -73.98991319280194,
          },
        ],
        "lat": 40.74198696405861,
        "lng": -73.98991319280194,
        "postalCode": "10010",
        "state": "NY",
      },
      "name": "Eataly",
    },
  },
  "trendingEntities": Object {},
}
`;

exports[`selectors/venues should venues entities property 1`] = `Object {}`;

exports[`selectors/venues should venues entities property 2`] = `
Object {
  "3fd66200f964a5209beb1ee3": Object {
    "categories": Array [
      Object {
        "icon": Object {
          "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
          "suffix": ".png",
        },
        "id": "4bf58dd8d48988d1cc941735",
        "name": "Steakhouse",
        "pluralName": "Steakhouses",
        "primary": true,
        "shortName": "Steakhouse",
      },
    ],
    "hasPerk": false,
    "id": "3fd66200f964a5209beb1ee3",
    "location": Object {
      "address": "178 Broadway",
      "cc": "US",
      "city": "Brooklyn",
      "country": "United States",
      "crossStreet": "at Driggs Ave",
      "distance": 10,
      "formattedAddress": Array [
        "178 Broadway (at Driggs Ave)",
        "Brooklyn, NY 11211",
        "United States",
      ],
      "labeledLatLngs": Array [
        Object {
          "label": "display",
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
        },
      ],
      "lat": 40.70995790682886,
      "lng": -73.96229110893742,
      "postalCode": "11211",
      "state": "NY",
    },
    "name": "Peter Luger Steak House",
    "referralId": "v-1565543515",
    "venuePage": Object {
      "id": "77462637",
    },
  },
}
`;
